--- a/templates/modular/header.html.twig
+++ b/templates/modular/header.html.twig
@@ -1,10 +1,12 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            {{ content }}
-            {% for button in page.header.buttons %}
-                <a class="page-scroll btn btn-xl" href="{{ button.url }}">{{ button.text }}</a>
-            {% endfor %}
-        </div>
+            <div class="intro-text-box">
+                {{ content }}
+                {% for button in page.header.buttons %}
+                    <a class="page-scroll btn btn-xl" href="{{ button.url }}">{{ button.text }}</a>
+                {% endfor %}
+            </div>
+        <div>
     </div>
 </header>
