Changed how contatcts work

--- a/css-compiled/global.css
+++ b/css-compiled/global.css
@@ -6045,20 +6045,31 @@ h1 {
 h3 {
   color: white; }
 
-section#contact h2 {
+section#contact-sect {
+  background-color: #222; }
+
+section#contact-sect h2 {
   color: #E56E4F; }
 
 .text-muted-light {
   color: white; }
 
-a.subscription-button i:hover,
-a.subscription-button i:focus,
-a.subscription-button i:active {
-  background-color: #404c63; }
-
 .intro-text-box {
   padding: .5%;
-  background-color: #1f2a40d9;
+  background-color: #1f2a40f5;
   border-radius: 25px; }
+
+a.subscription-button i {
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  transition: all .3s; }
+
+.contact-image {
+  pointer-events: none; }
+
+a.subscription-button span i:hover,
+a.subscription-button span i:focus,
+a.subscription-button span i:active {
+  color: #444; }
 
 /*# sourceMappingURL=global.css.map */
