--- a/templates/modular/contact.html.twig
+++ b/templates/modular/contact.html.twig
@@ -1,9 +1,8 @@
-<section id="subscriptions">
+<section id="contact-sect">
   <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
             {{ content }}
-
         </div>
     </div>
     <div class="row text-center">
@@ -28,11 +27,6 @@
             </div>
         {% endfor %}
     </div>
-    
-    
-    <iframe id="multi_iframe" frameborder="0" scrolling="no" allowfullscreen="" 
-        src="https://www.podbean.com/media/player/multi?playlist=http%3A%2F%2Fplaylist.podbean.com%2F3464523%2Fplaylist_multi.xml&vjs=1&size=315&share=1&fonts=Helvetica&auto=0&download=0&skin=0" width="100%" height="505">
-            
-    </iframe>
 </div>
-</section>
+
+
