--- a/scss/podcaster.scss
+++ b/scss/podcaster.scss
@@ -34,6 +34,10 @@ h3 {
     color: white;
 }
 
+.team-description
+{
+    color: white;
+}
 section#contact-sect {
     background-color: #222;
 }
@@ -43,6 +47,13 @@ section#contact-sect h2 {
 
 .text-muted-light {
     color: white;
+}
+
+.team-description{
+    padding: 5%;
+    background-color: #1f2a40f5;
+        border-radius: 25px;
+
 }
 
 .intro-text-box {
