Refactor: john -> portfolio

--- a/templates/partials/portfolio-base.html.twig
+++ b/templates/partials/portfolio-base.html.twig
@@ -24,14 +24,13 @@
 
   {% endblock head%}
 </head>
-<body id="page-top" class="index">
+<body id="page-top" class="index" onload="initEvents()">
 
   {% block javascripts_bottom %}
     {% do assets.add('jquery',101) %}
     {% do assets.addJs('theme://js/bootstrap.min.js',100) %}
     {% do assets.addJs('theme://js/jquery.easing.min.js') %}
     {% do assets.addJs('theme://js/classie.js') %}
-    {% do assets.addJs('theme://js/cbpAnimatedHeader.js') %}
     {% do assets.addJs('theme://js/agency.js') %}
   
     {% do assets.addJs('theme://js/utils.js') %}
